tarjetas se muestran con data de la API

--- a/index.html
+++ b/index.html
@@ -8,14 +8,16 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="contenedor">
-       <div class="targeta">
-            <h1 class="nombre">ditto</h1>
-            <img class="imagen-ditto" src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/back/shiny/132.png" alt="">
-        </div> 
-    </div>
-    
-
+    <header>
+        <img class="logo" src="Pokemon-Logo-PNG-Pic.png">
+        <h1 class="titulo">Pokémones Clásicos</h1>
+    </header>
+    <div class="contenedor"></div>
+    <footer>
+        <img src="pokeball.png">
+        Presiona la tarjeta para atrapar otro pokémon 
+        <img src="pokeball.png">
+    </footer>
     <script src="main.js"></script>
 </body>
 </html>
